test: make runtime source inspection default deny